# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "include",
    "//utils/system/safwk/native/include",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/storage_service/file_manager/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include/",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/storage_service/base/include",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/storage_service/disk/include",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/storage_service/event_handler/include",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/storage_service/manager/include",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/storage_service/utils/include",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/storage_service/volume/include",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/storage_service/interface/include",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/device_storage_service/include",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/fs_manager/include",
    "//utils/system/safwk/native/include",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/frameworks/device_storage_manager/include",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/storage_service/interface/include/interface",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include/",
    "//base/startup/init_lite/services/include",
    "//third_party/cJSON",
  ]
}

deps_ex = [
  "aafwk_standard:base",
  "aafwk_standard:want",
  "appexecfwk_standard:appexecfwk_base",
  "appexecfwk_standard:libeventhandler",
  "ces_standard:cesfwk_innerkits",
  "ipc:ipc_core",
  "hiviewdfx_hilog_native:libhilog",
  "safwk:system_ability_fwk",
  "samgr_L2:samgr_proxy",
]

ohos_unittest("test_storage_service") {
  module_out_path = "storage_standard/sss_test"

  sources = [ "src/storage_service_manager_test.cpp" ]
  configs = [ ":module_private_config" ]
  deps = [
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services:storage_service",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = deps_ex
}

ohos_unittest("test_storage_service_disk") {
  module_out_path = "storage_standard/sss_test"

  sources = [ "src/storage_service_disk_test.cpp" ]
  configs = [ ":module_private_config" ]
  deps = [
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services:storage_service",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = deps_ex
}

ohos_unittest("test_storage_service_base") {
  module_out_path = "storage_standard/sss_test"

  sources = [ "src/storage_service_base_test.cpp" ]
  configs = [ ":module_private_config" ]
  deps = [
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services:storage_service",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = deps_ex
}

ohos_unittest("test_storage_service_local_envent_poll") {
  module_out_path = "storage_standard/sss_test"

  sources = [ "src/storage_service_local_envent_poll_test.cpp" ]
  configs = [ ":module_private_config" ]
  deps = [
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services:storage_service",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = deps_ex
}

ohos_unittest("test_storage_service_local_envent_socket") {
  module_out_path = "storage_standard/sss_test"

  sources = [ "src/storage_service_local_envent_socket_test.cpp" ]
  configs = [ ":module_private_config" ]
  deps = [
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services:storage_service",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = deps_ex
}

group("unittest") {
  testonly = true
  deps = [
    ":test_storage_service",
    ":test_storage_service_base",
    ":test_storage_service_disk",
    ":test_storage_service_local_envent_poll",
    ":test_storage_service_local_envent_socket",
  ]
}
