# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

ohos_unittest("crypto_test") {
  module_out_path = "storage_standard/crypto"

  sources = [ "fbe_crypto_test.cpp" ]

  include_dirs = [
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/storage_service/include",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/test/unittest/crypto/include",
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services/storage_service/crypto/include",
    "//third_party/json/include",
    "//base/security/huks/interfaces/innerkits/huks_standard/main/include",
  ]

  configs = [
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services:storage_diskmgr_config",
    "//build/config/compiler:exceptions",
  ]

  deps = [
    "//foundation/distributeddatamgr/distributedfile/storage/diskmgr/services:storage_service",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
}

group("test") {
  testonly = true

  deps = [ ":crypto_test" ]
}
